--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 			<div class="item item-i3">3</div>
 			<div class="item">4</div>
 			<div class="item">5</div>
+			<div class="item">1</div>
+			<div class="item ">2</div>
+			<div class="item ">3</div>
+			<div class="item">4</div>
+			<div class="item">5</div>
 		</div>
 	</body>
 </html>
